fix: resolve 31 Zed errors + add HttpServerSessionStore + Jackson deps
- Create HttpServerSessionStore interface (was missing, caused 8 errors in UssdSessionStore)
- Fix UssdDemoBootstrap.prepareHttpSession visibility (private -> public)
- Fix Spring UssdRestController: remove unused imports
- Fix SpringUssdSmokeTest: rewrite wireHttpServerRa() to use actual HttpServerResourceAdaptor API
- Fix RaPortManager.List.copyOf() -> Collections.unmodifiableList()
- Add spring-boot-starter-web to spring-ussdgw POM (fixes Jackson + Spring Web deps)
- Add jackson-databind to embedded-j25-ussdgw POM
- Move TelemetryVertxServer to correct package (monitor -> telemetry/vertx)
- Remove @FunctionalInterface from MemoryReliefParticipant (2 abstract methods)
- Fix registerRa() calls to use 2-arg API
- Remove unnecessary @SuppressWarnings(unchecked) in MicroSleeContainer